--- a/src/Debug/html/index.html
+++ b/src/Debug/html/index.html
@@ -27,40 +27,58 @@
 <body>
     <div id = "title">HybridDebug工具</div>
     <div id = "center">
+        <div id = "projects" style = "width: auto;height: 400px;background-color:white">
+            <div class = "ivu-cell-group">
+                <div class="ivu-card-head"><p><i class="ivu-icon ivu-icon-ios-options"></i> 项目列表</p></div>
+                <div class="ivu-cell-group" style = "min-width: 60px">
+                    
+                    <div :class="{'ivu-cell':1,'ivu-cell-selected':index == selectdProjectIndex}" v-for = "(item,index) in projectList" @click = "didSelectedProjectList(index)">
+                        <div class="ivu-cell-item">
+                            <div class="ivu-cell-main">
+                                <div class="ivu-cell-title">{{item}}</div>
+                                <div class="ivu-cell-label"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class = "verticalSep"></div>
+
         <div class = "workingSection" style = "width: 36%;margin-left: 4px;">
-            <div id="infoForm" style = "flex: 1;">
-                <i-table stripe border :columns="desc" :data="infos">
-                    <template slot-scope="{index}" slot="action">
-                        <i-select v-if="index == 1" :placeholder="defaultUniqueName" style="flex: 1" :on-change = "didSelectedUniqueName()" v-model="selectedUniqueName">
-                            <i-option v-for="item in uniqueNameList" :value="item" :key="item">{{item}}</i-ption>
-                        </i-select>
-                        <i-select v-if="index == 2" :placeholder="defaultCompileFolderName" style="flex: 1" :on-change="didSelectedCompileProjectName()"
-                            v-model="selectedCompileFolderName">
-                            <i-option v-for="item in compileProjectList" :value="item" :key="item">{{item}}</i-ption>
-                        </i-select>
-                    </template>
-                </i-table>
-                <div style = "display: flex;">
-                    <i-input style="margin-top: 4px;" :autofocus="false" :rows="6" v-model="compilerLog" type="textarea" placeholder="日志输出区" >
-                    </i-input>
+            <div class="ivu-tag ivu-tag-default ivu-tag-checked" style = "height: auto;">
+                <div>
+                    <span class="ivu-tag-text" style = "line-height: 20px;">当前项目路径:</span>
+                </div>
+                <div>
+                    <span class="ivu-tag-text" style = "line-height: 20px;">{{statusPath}}</span>
+                </div>
+            </div>
+
+            <div id="infoForm" style = "flex: 1;margin-top: 12px;">
+                <i-table stripe border :columns="desc" :data="infos"></i-table>
+                
+                <div class = "hSep" style = "margin-top: 4px;"></div>
+                <div style = "margin-top: 12px;">
+                    <i-button :type="compileOpinion.zipJS ? 'success':'default' " @click = "compileOpinion.zipJS = !compileOpinion.zipJS">压缩JS
+                    </i-button>
                 </div>
 
-                <div style = "width: 100%;height: auto;display: flex;flex-direction: row;flex-wrap: wrap;">
-                    <div style="margin-top:4px;width: 46%;margin-left: 4px;">
-                        <i-button type="primary" class="actionButton" @click="compileCodes()">编译源码</i-button>
-                    </div>
-                    <div style="margin-top:4px;width: 46%;margin-left: 4px;">
-                        <i-button type="primary" class="actionButton" @click="reloadApp()">刷新App</i-button>
-                    </div>
-                    <div style ="margin-top:4px;width: 46%;margin-left: 4px;">
-                        <i-button type="primary" class="actionButton" @click="changeMobileAppName()">设置当前App名字</i-button>
-                    </div>
-                    <div style ="margin-top:4px;width: 46%;margin-left: 4px;">
-                        <i-button type="primary" class="actionButton" @click="reloadZip()">重装Zip包</i-button>
+                <div class = "hSep" style = "margin-top: 4px;"></div>
+
+                <div id="actionButtons" style="display: flex;flex-direction: row;margin-top: 12px;">
+                    <div class="ivu-btn-group ivu-btn-group-default">
+                        <i-button type="default" style = "font-size: 14px" icon="ios-construct-outline" @click="compileCodes()">编译</i-button>
+                        <i-button type="default" style = "font-size: 14px" icon="ios-link-outline" @click="reloadZip()">传输</i-button>
+                        <i-button type="default" style = "font-size: 14px" icon="ios-refresh" @click="reloadApp()">刷新</i-button>
+                        <i-button type="default" style = "font-size: 14px" icon="ios-cloud-upload" @click="uploadZip()">上传</i-button>
                     </div>
                 </div>
-                <div style ="margin-top:4px;">
-                    <i-button type="primary" class="actionButton" @click="uploadZip()">上传Zip包</i-button>
+                <div style="display: flex;margin-top: 12px;">
+                    <i-input style="margin-top: 4px;" :autofocus="false" :rows="8" v-model="compilerLog" type="textarea"
+                        placeholder="日志输出区">
+                    </i-input>
                 </div>
             </div>
         </div>
